// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search > 検索UIのテスト 1`] = `
<div>
  <div
    class="search-root"
  >
    <form
      class="search-input close"
      role="search"
    >
      <input
        class="search-input"
        placeholder="Search"
        type="search"
        value=""
      />
      <button
        class="search-button"
        title="Submit the search query"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="search-icon"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11.5 11.5L15 15M1 7a6 6 0 1012 0 6 6 0 00-12 0z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
      <button
        class="reset-button"
        hidden=""
        title="Clear the search query"
        type="reset"
      >
        ×
      </button>
    </form>
    <div
      class="popover"
      data-testid="search-result"
      style="display: none;"
    >
      <div
        data-testid="search-result-count"
      >
        0
         results
      </div>
      <ul
        class="search-result-list"
      />
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 2`] = `
<div>
  <div
    class="search-root"
  >
    <form
      class="search-input open"
      role="search"
    >
      <input
        class="search-input"
        placeholder="Search"
        type="search"
        value="Big"
      />
      <button
        class="search-button"
        title="Submit the search query"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="search-icon"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11.5 11.5L15 15M1 7a6 6 0 1012 0 6 6 0 00-12 0z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
      <button
        class="reset-button"
        title="Clear the search query"
        type="reset"
      >
        ×
      </button>
    </form>
    <div
      class="popover"
      data-testid="search-result"
      style="display: block;"
    >
      <div
        data-testid="search-result-count"
      >
        20
         results
      </div>
      <ul
        class="search-result-list"
      >
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_sa_permission_from_cli/"
          >
            <span>
              <mark>
                Big
              </mark>
              Queryで特定データセットに権限を付与する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...特定の
            <mark>
              Big
            </mark>
            Queryデータセットに...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_empty_string_array/"
          >
            <span>
              <mark>
                Big
              </mark>
              QueryでStringの空配列を生成する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            Queryで空配列...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_3/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               3
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_4/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               4
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_5/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               5
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_6/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               6
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_7/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               7
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_8/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               8
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_9/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               9
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_10/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               10
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_11/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               11
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_12/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               12
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_13/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               13
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_14/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               14
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_15/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               15
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_16/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               16
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_17/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               17
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_18/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               18
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_19/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               19
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_20/"
          >
            <span>
              Mock 
              <mark>
                Big
              </mark>
               20
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              Big
            </mark>
            ...
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 3`] = `
<div>
  <div
    class="search-root"
  >
    <form
      class="search-input open"
      role="search"
    >
      <input
        class="search-input"
        placeholder="Search"
        type="search"
        value="BigQuery"
      />
      <button
        class="search-button"
        title="Submit the search query"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="search-icon"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11.5 11.5L15 15M1 7a6 6 0 1012 0 6 6 0 00-12 0z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
      <button
        class="reset-button"
        title="Clear the search query"
        type="reset"
      >
        ×
      </button>
    </form>
    <div
      class="popover"
      data-testid="search-result"
      style="display: block;"
    >
      <div
        data-testid="search-result-count"
      >
        12
         results
      </div>
      <ul
        class="search-result-list"
      >
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_sa_permission_from_cli/"
          >
            <span>
              <mark>
                BigQuery
              </mark>
              で特定データセットに権限を付与する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            のサービスアカウント...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_empty_string_array/"
          >
            <span>
              <mark>
                BigQuery
              </mark>
              でStringの空配列を生成する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            で空配列を...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_3/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               3
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_4/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               4
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_5/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               5
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_6/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               6
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_7/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               7
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_8/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               8
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_9/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               9
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_10/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               10
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_11/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               11
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_12/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               12
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Search > 検索UIのテスト 4`] = `
<div>
  <div
    class="search-root"
  >
    <form
      class="search-input close"
      role="search"
    >
      <input
        class="search-input"
        placeholder="Search"
        type="search"
        value="BigQuery"
      />
      <button
        class="search-button"
        title="Submit the search query"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="search-icon"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11.5 11.5L15 15M1 7a6 6 0 1012 0 6 6 0 00-12 0z"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="1.5"
          />
        </svg>
      </button>
      <button
        class="reset-button"
        title="Clear the search query"
        type="reset"
      >
        ×
      </button>
    </form>
    <div
      class="popover"
      data-testid="search-result"
      style="display: none;"
    >
      <div
        data-testid="search-result-count"
      >
        12
         results
      </div>
      <ul
        class="search-result-list"
      >
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_sa_permission_from_cli/"
          >
            <span>
              <mark>
                BigQuery
              </mark>
              で特定データセットに権限を付与する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            のサービスアカウント...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_empty_string_array/"
          >
            <span>
              <mark>
                BigQuery
              </mark>
              でStringの空配列を生成する
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            で空配列を...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_3/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               3
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_4/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               4
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_5/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               5
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_6/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               6
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_7/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               7
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_8/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               8
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_9/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               9
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_10/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               10
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_11/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               11
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
        <li
          class="search-result-item"
          data-testid="search-result-item"
        >
          <a
            class="link"
            href="/entries/bigquery_12/"
          >
            <span>
              Mock 
              <mark>
                BigQuery
              </mark>
               12
            </span>
          </a>
          <br />
          <span
            class="search-result-item-snippet"
          >
            ...
            <mark>
              BigQuery
            </mark>
            ...
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
